--- a/users/index.html
+++ b/users/index.html
@@ -5,5 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Usuários</title>
   </head>
-  <body></body>
+  <body>
+    <ul>
+      <li>
+        Christian
+      </li>
+    </ul>
+  </body>
 </html>
