--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Curso git flow</title>
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <a href="products/index.html">Products</a>
+      <a href="users/index.html">Users</a>
+    </nav>
+  </body>
 </html>
