--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <nav>
-      <a href="products/index.html">Products</a>
-      <a href="users/index.html">Users</a>
+      <a href="products/index.html">Produtos</a>
+      <a href="users/index.html">Usuários</a>
     </nav>
   </body>
 </html>
